--- a/rnw_sympy.ipynb
+++ b/rnw_sympy.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMdSMr1EDWIzHkLO3JfjMkp",
+      "authorship_tag": "ABX9TyMF7sRgKbSDcs3s5s14LGSL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import sympy\n",
         "sympy.init_printing()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
         "                       [s, c,0],\n",
         "                       [0, 0,1]])"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "    return expr.subs([(syms[j],sympy.S.One) if i==j else (syms[j],0) for j in range(len(syms))])\n",
         "  return [ calc_term(i) for i in range(len(syms))]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "    'zCP': sympy.symbols('zCP'),\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "dq = (dq1, dq2, dq3, dq4, dq5)\n",
         "ddq = (ddq1, ddq2, ddq3, ddq4, ddq5)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
         "             (q4.diff(),dq4),(dq4.diff(),ddq4),\n",
         "             (q5.diff(),dq5),(dq5.diff(),ddq5)]"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -222,16 +222,16 @@
         "id": "K8LqCvgmGHyI",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 99
+          "height": 79
         },
-        "outputId": "a10087e9-964c-4236-eef0-fddbbed32a91"
+        "outputId": "4f673137-89dd-4697-827c-47b38b8041ba"
       },
       "source": [
         "R_wb = rot_z(psi) * rot_y(theta) * rot_z(phi)\n",
         "T_wb = sympy.Matrix([ q1, q2, cone['r'] * sympy.sin(theta)])\n",
         "R_wb, T_wb"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -260,7 +260,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 7
         }
       ]
     },
@@ -281,13 +281,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "994ec704-6569-4aa3-933a-c604fdb8798a"
+        "outputId": "cce09fb4-aa92-479c-90df-8906d17e4dd7"
       },
       "source": [
         "CoM_b = sympy.Matrix([ cone['xCM'], 0, cone['zCM'] ])\n",
         "CoM_b"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 120
+          "execution_count": 8
         }
       ]
     },
@@ -325,13 +325,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "a989186a-5830-4f86-80cc-34b44e77ea54"
+        "outputId": "5d7afa2d-c72c-42d1-8809-7acf9fc357c3"
       },
       "source": [
         "CoM_w = R_wb * CoM_b + T_wb\n",
         "CoM_w"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,7 +354,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 9
         }
       ]
     },
@@ -383,13 +383,13 @@
           "height": 99
         },
         "id": "XZV6s4yR_do3",
-        "outputId": "d5e74bf0-f148-41cf-9228-f02f4030a257"
+        "outputId": "68331491-8f27-4373-a14b-739b20bdf4ca"
       },
       "source": [
         "CM_vel = sympy.simplify(CoM_w.diff(t).subs(sub_rules))\n",
         "CM_vel"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 122
+          "execution_count": 10
         }
       ]
     },
@@ -445,7 +445,7 @@
         "L = T-V\n",
         "L = sympy.simplify(L)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
         "])\n",
         "eoms = eoms.subs(sub_rules)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -489,7 +489,7 @@
         "Mddq = eoms-h\n",
         "M = sympy.Matrix([linear_decomp(Mddq[i,0],ddq) for i in range(5)])"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -501,7 +501,7 @@
         "M = sympy.simplify(M)\n",
         "h = sympy.simplify(h)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -527,14 +527,14 @@
           "height": 79
         },
         "id": "3QlYPo88h95Z",
-        "outputId": "b4566fa3-f1da-4563-97c9-727351516669"
+        "outputId": "83c66730-ca0e-4a77-9620-f7de7a546a25"
       },
       "source": [
         "omega_hat = R_wb.diff(t).subs(sub_rules) * (R_wb.T)\n",
         "omega_hat = sympy.simplify(omega_hat)\n",
         "omega_hat"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +563,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 127
+          "execution_count": 15
         }
       ]
     },
@@ -575,13 +575,13 @@
           "height": 79
         },
         "id": "xEJDcduPiEYy",
-        "outputId": "7b917426-9218-4d1a-b837-a58574987c9f"
+        "outputId": "fc7bd455-fca0-4364-f6bf-96d0c19baeae"
       },
       "source": [
         "omega = sympy.Matrix([ omega_hat[2,1], omega_hat[0,2], omega_hat[1,0] ])\n",
         "omega"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -598,7 +598,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 128
+          "execution_count": 16
         }
       ]
     },
@@ -610,13 +610,13 @@
           "height": 79
         },
         "id": "It4RyEkwiHhl",
-        "outputId": "da3b2660-eed6-4c88-97cd-5da04d93e0e0"
+        "outputId": "660e95e0-8497-4417-c1c6-a2b6b5204217"
       },
       "source": [
         "r_CA = rot_z(psi) * rot_y(theta) * sympy.Matrix([ -cone['r'], 0 ,0 ])\n",
         "r_CA"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +633,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 129
+          "execution_count": 17
         }
       ]
     },
@@ -645,14 +645,14 @@
           "height": 79
         },
         "id": "OY1UJkD6iKaa",
-        "outputId": "295d0446-f518-414b-fa2d-93932201f13e"
+        "outputId": "2b51b261-e590-4cd1-da53-212963c79711"
       },
       "source": [
         "vel_A = omega.cross(r_CA)\n",
         "vel_A = sympy.simplify(vel_A)\n",
         "vel_A"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 130
+          "execution_count": 18
         }
       ]
     },
@@ -687,14 +687,14 @@
           "height": 58
         },
         "id": "WhhrYMF-iOJB",
-        "outputId": "c811b585-6fe6-4903-8de7-72057ff680de"
+        "outputId": "2ff061dd-a19b-44bb-a9df-4ef100711a63"
       },
       "source": [
         "rolling_constrains = [ dq1 - vel_A[0,0], dq2 - vel_A[1,0] ]\n",
         "A_nh = sympy.Matrix([linear_decomp(eq,dq) for eq in rolling_constrains])\n",
         "A_nh"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +709,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 19
         }
       ]
     },
@@ -732,13 +732,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 79
         },
-        "outputId": "59aa0070-02e0-4f1d-dad8-b1b173da999f"
+        "outputId": "c79f1372-fd83-4e0e-f34a-ed522a013a1b"
       },
       "source": [
         "CP_b = sympy.Matrix([ cone['zCP'], 0, cone['zCP'] ])\n",
         "CP_b"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +755,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 132
+          "execution_count": 20
         }
       ]
     },
@@ -767,13 +767,13 @@
           "height": 79
         },
         "id": "Iju62OUz8qD8",
-        "outputId": "ef1f719c-2831-4826-dc1b-800dda33ada5"
+        "outputId": "c5fbcbe8-6f3e-41ee-f1f9-312cb02a63e4"
       },
       "source": [
         "CP_w = R_wb * CP_b + T_wb\n",
         "CP_w"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,7 +796,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 21
         }
       ]
     },
@@ -808,13 +808,13 @@
           "height": 99
         },
         "id": "pVvGSQPz8s93",
-        "outputId": "b9ca178d-4694-4e5a-9c46-3b526ae99181"
+        "outputId": "4eab754b-bc3d-4095-c87d-06e1962d052c"
       },
       "source": [
         "CP_dot_w = CP_w.diff(t).subs(sub_rules)\n",
         "CP_dot_w"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 22
         }
       ]
     },
@@ -864,16 +864,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 78
+          "height": 58
         },
         "id": "m1eLzn5d-Nja",
-        "outputId": "276dcb4d-a532-4ec5-d0bf-3bf2bfc55b9a"
+        "outputId": "4bfe08b5-0773-41ae-c296-b32cda54f83e"
       },
       "source": [
         "A_cp = sympy.Matrix([linear_decomp(eq,dq) for eq in CP_dot_w[:2]])\n",
         "A_cp"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +896,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 135
+          "execution_count": 23
         }
       ]
     },
@@ -923,16 +923,16 @@
         "id": "A0nSkfo0xwGt",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 99
         },
-        "outputId": "63395eb6-f668-4518-eb6d-5c2197b9c5c8"
+        "outputId": "59926270-d4da-4cb3-cbcc-e1e849723207"
       },
       "source": [
         "A = sympy.Matrix([A_nh, A_cp])\n",
         "A = sympy.simplify(A)\n",
         "A"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -967,7 +967,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 136
+          "execution_count": 24
         }
       ]
     },
@@ -980,7 +980,7 @@
         "dAdt = A.diff(t).subs(sub_rules)\n",
         "dAdt = sympy.simplify(dAdt)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -992,7 +992,21 @@
         "### Equation of Motion\n",
         "\n",
         "\n",
-        "$\\left[\\begin{array}{cc}-\\mathbf{A} & 0 \\\\ \\mathbf{M} & -\\mathbf{A}^{T}\\end{array}\\right]\\left[\\begin{array}{l}\\ddot{\\mathbf{q}} \\\\ \\boldsymbol{\\lambda}\\end{array}\\right]=\\left[\\begin{array}{c}\\dot{\\mathbf{A}} \\dot{\\mathbf{q}} \\\\ -\\mathbf{h}\\end{array}\\right]$"
+        "$$\n",
+        "\\begin{bmatrix}\n",
+        "-\\mathbf{A} & 0 \\\\ \n",
+        "\\mathbf{M} & -\\mathbf{A}^{T}\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix}\n",
+        "\\ddot{\\mathbf{q}} \\\\ \n",
+        "\\boldsymbol{\\lambda}\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix}\n",
+        "\\dot{\\mathbf{A}} \n",
+        "\\dot{\\mathbf{q}} \\\\ \n",
+        "-\\mathbf{h}\n",
+        "\\end{bmatrix}\n",
+        "$$"
       ]
     },
     {
@@ -1004,7 +1018,7 @@
         "M_left = sympy.Matrix([[-A,sympy.zeros(4)],[M, -A.T]])\n",
         "M_right = sympy.Matrix([[dAdt*sympy.Matrix(dq)],[-h]])"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1018,16 +1032,28 @@
         "The dynamic model is represented as a linear equation:\n",
         "\n",
         "$$\n",
-        "\\mathbf{M}_{\\mathbf{left}}(q) \n",
+        "\\mathbf{M}_{\\mathbf{left}}(\\mathbf{q}) \n",
         "\\begin{bmatrix}\n",
-        "\\ddot{q} \\\\\n",
-        "\\lambda\n",
+        "\\ddot{\\mathbf{q}} \\\\\n",
+        "\\boldsymbol{\\lambda}\n",
         "\\end{bmatrix}\n",
-        "= \\mathbf{M}_{\\mathbf{right}}(q,\\dot{q})\n",
+        "= \\mathbf{M}_{\\mathbf{right}}(\\mathbf{q},\\dot{\\mathbf{q}})\n",
         "$$\n",
         "\n",
-        "Functions to calculate $\\mathbf{M}_{\\mathbf{left}}$ and $\\mathbf{M}_{\\mathbf{right}}$ are exported.\n",
+        "Functions to calculate $\\mathbf{M}_{\\mathbf{left}}$ and $\\mathbf{M}_{\\mathbf{right}}$ are exported with the following signatures:\n",
         "\n",
+        "```python\n",
+        "def M_left(q, r, m, g, xCM, zCM, xCP, zCP)\n",
+        "def M_right(q, dq, r, m, g, xCM, zCM, xCP, zCP)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JP8tiS8GfUCd"
+      },
+      "source": [
         "We want the output function from `sympy.lambdify` take $q$ and $\\dot{q}$ as vectors, this is achieved using `sympy.MatrixSymbol`"
       ]
     },
@@ -1049,7 +1075,7 @@
         "M_left = M_left.subs(sub_rule_out)\n",
         "M_right = M_right.subs(sub_rule_out)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1069,12 +1095,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 39
         },
-        "outputId": "56fd2562-b547-4544-96fd-76da22d4a1ce"
+        "outputId": "1a69dba8-2ed9-40f7-aa6c-35d3279cbc22"
       },
       "source": [
         "M_left.free_symbols, M_right.free_symbols"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1088,7 +1114,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 140
+          "execution_count": 28
         }
       ]
     },
@@ -1101,7 +1127,7 @@
         "f_M_left = sympy.lambdify([mq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],M_left)\n",
         "f_M_right = sympy.lambdify([mq,mdq,cone['r'],cone['m'],cone['g'],cone['xCM'],cone['zCM'],cone['xCP'],cone['zCP']],M_right)"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1118,7 +1144,7 @@
         "dill.settings['recurse'] = True\n",
         "dill.dump(outputs,open(\"rnw_model\", \"wb\"))"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1137,7 +1163,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7563879-502a-45dd-f378-69527956ca7e"
+        "outputId": "a742c4cb-28ec-4e79-ef8c-79c680161ff7"
       },
       "source": [
         "import numpy as np\n",
@@ -1163,7 +1189,7 @@
         "sol_multipliers = sol[5:].T\n",
         "sol_ddq, sol_multipliers"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1178,7 +1204,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 143
+          "execution_count": 32
         }
       ]
     }
