--- a/Modeling_Course_24_10_2023.ipynb
+++ b/Modeling_Course_24_10_2023.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmD1QqrjRGiWFFjgsIUhr/",
+      "authorship_tag": "ABX9TyP7ns+gAHhkbQncSdlZKGh0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 217,
       "metadata": {
         "id": "A3YYNqsXFI-M"
       },
@@ -112,9 +112,9 @@
           "height": 430
         },
         "id": "hK8klYP4FPmh",
-        "outputId": "ecdd480c-d883-4f5d-a210-04243c9fdc28"
+        "outputId": "26b67c6e-e079-4f00-e81b-87a6c7b3baaa"
       },
-      "execution_count": 210,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "display_data",
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "fuOOPJPiXFg6"
       },
-      "execution_count": 211,
+      "execution_count": 219,
       "outputs": []
     },
     {
@@ -206,9 +206,9 @@
           "height": 430
         },
         "id": "Sj16fBJyYbKk",
-        "outputId": "7b23b731-16a0-4718-addc-e9997ac87dee"
+        "outputId": "4dbfb94b-bca0-46af-f15d-291df7c8f320"
       },
-      "execution_count": 212,
+      "execution_count": 220,
       "outputs": [
         {
           "output_type": "display_data",
@@ -289,9 +289,9 @@
           "height": 430
         },
         "id": "IfPDE88g_Jvx",
-        "outputId": "260f0fdb-7f00-4b86-d081-544b27ada174"
+        "outputId": "3933fcf9-8554-474b-dc48-c04a6ed83461"
       },
-      "execution_count": 213,
+      "execution_count": 221,
       "outputs": [
         {
           "output_type": "display_data",
@@ -334,7 +334,7 @@
         "fps = 100\n",
         "vt = np.linspace(0, duration, duration*fps)\n",
         "\n",
-        "ydot = lambda t, x : [x[1], -x[0]]\n",
+        "ydot = lambda t, y : [y[1], -y[0]]\n",
         "\n",
         "ivp_result = solve_ivp(\n",
         "    ydot,\n",
@@ -357,9 +357,9 @@
           "height": 430
         },
         "id": "HF9SSxacdbzn",
-        "outputId": "7add59d4-17ec-420f-bf08-170aa0c08259"
+        "outputId": "1505450a-25e4-47a9-89ac-be2cc1c1d25b"
       },
-      "execution_count": 214,
+      "execution_count": 222,
       "outputs": [
         {
           "output_type": "display_data",
@@ -454,9 +454,9 @@
           "height": 435
         },
         "id": "DH8kSr1gDFUr",
-        "outputId": "84d88531-0415-4199-9902-39fecf8e87ea"
+        "outputId": "e30c2c3b-3c9c-42d4-ded0-8a802fa1d76a"
       },
-      "execution_count": 215,
+      "execution_count": 223,
       "outputs": [
         {
           "output_type": "display_data",
@@ -543,9 +543,9 @@
           "height": 430
         },
         "id": "AeKUq3JaUICA",
-        "outputId": "acc89111-9120-41c9-98ce-33a00ed1c172"
+        "outputId": "16689a0d-b4f1-4120-f39f-20705f0504e5"
       },
-      "execution_count": 216,
+      "execution_count": 224,
       "outputs": [
         {
           "output_type": "display_data",
